--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Booleaner</title>
 </head>
 <body>
     <!-- Intestazione -->
     <header>
-
-    </header>
+       <img id="logo" src="img/logo.svg" alt="Logo Booleaner">    </header>
     <!-- Parte Principale -->
     <main>
 
