--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <!-- Intestazione -->
     <header>
-       <img id="logo" src="img/logo.svg" alt="Logo Booleaner">    </header>
-    <!-- Parte Principale -->
+       <img id="logo" src="img/logo.svg" alt="Logo Booleaner">    
+    </header> 
+       <!-- Parte Principale -->
     <main>
 
     </main>
