--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
         <!-- Articolo -->
         <section>
             <p id="articolo">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="evidenziatore">Facere debitis maxime quaerat quis, optio nihil exercitationem aperiam iusto dolorem porro mollitia eius nemo.</span> Perspiciatis vero consequuntur cum vel tenetur nulla!</p>
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+            </ul>
         </section>
+        
+        <!-- Tabella -->
+        
     </main>
     <!-- Footer -->
     <footer>
