--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
         </section>
         
         <!-- Tabella -->
-        
+        <table>
+            <thead>
+               <tr>
+                <th>
+                    lorem ipsum dolor
+                </th>
+                <th>
+                    lorem ipsum dolor
+                </th>
+                <th>
+                    lorem ipsum dolor
+                </th>
+               </tr>
+            </thead>
+        </table>
     </main>
     <!-- Footer -->
     <footer>
