--- a/index.html
+++ b/index.html
@@ -41,21 +41,17 @@
         </section>
         
         <!-- Tabella -->
-        <table>
-            <thead>
-               <tr>
-                <th>
-                    lorem ipsum dolor
-                </th>
-                <th>
-                    lorem ipsum dolor
-                </th>
-                <th>
-                    lorem ipsum dolor
-                </th>
-               </tr>
-            </thead>
-        </table>
+        <section class="thead">
+            <div class="row blue">
+                lorem ipsum dolor
+            </div>
+            <div class="row blue">
+                lorem ipsum dolor
+            </div>
+            <div class="row blue">
+                lorem ipsum dolor
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer>
