--- a/index.html
+++ b/index.html
@@ -41,16 +41,32 @@
         </section>
         
         <!-- Tabella -->
-        <section class="thead">
-            <div class="row blue">
-                lorem ipsum dolor
-            </div>
-            <div class="row blue">
-                lorem ipsum dolor
-            </div>
-            <div class="row blue">
-                lorem ipsum dolor
-            </div>
+        <section>
+          <table>
+            <thead >
+               <tr>
+                <th>lorem ipsum dolor</th>
+                <th>lorem ipsum dolor</th>
+                <th>lorem ipsum dolor</th>
+               </tr>
+            </thead>
+            <tbody>
+                <td>lorem ipsum dolor</td>
+                <td>lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, odit excepturi nulla consequatur voluptate laboriosam similique at quo corrupti illo quasi fugit repudiandae hic nisi, magnam quisquam facere repellendus doloremque.</td>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia a voluptas itaque deserunt distinctio voluptatum delectus, aut pariatur adipisci in corporis consequuntur libero sapiente mollitia. Accusantium est vero ullam incidunt?</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia a voluptas itaque deserunt distinctio voluptatum delectus, aut pariatur adipisci in corporis consequuntur libero sapiente mollitia. Accusantium est vero ullam incidunt?</td>
+                </tr>
+            </tbody>
+          </table>
+          
         </section>
     </main>
     <!-- Footer -->
