--- a/index.html
+++ b/index.html
@@ -66,11 +66,17 @@
                 </tr>
             </tbody>
           </table>
-          
         </section>
     </main>
     <!-- Footer -->
     <footer>
+    <section>
+        <p id="articolo">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="evidenziatore">Facere debitis maxime quaerat quis, optio nihil exercitationem aperiam iusto dolorem porro mollitia eius nemo.</span> Perspiciatis vero consequuntur cum vel tenetur nulla!</p>
+        <h3>Potrebbero interessarti</h3>
+        <div id="image"> <span class="scritta">lorem ipsum dolor</span></div>
+        <div id="image-1"> <span class="scritta">lorem ipsum dolor</span></div>
+
+    </section>        
 
     </footer>
 </body>
