--- a/bonus/index.html
+++ b/bonus/index.html
@@ -13,7 +13,7 @@
         <img id="logo" src="img/logo.svg" alt="Logo Booleaner">    
      </header> 
         <!-- Contenitore -->
-        
+
      <div class="container">
       
         <!-- Parte Principale -->
@@ -21,7 +21,9 @@
          <!-- Titolo Principale -->
          <section>
              <h1>Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee </h1>
-             <p id="dati-scrittore">Scritto da The Booleaner <br>
+             <p id="dati-scrittore">Scritto da <span id="bool">
+                The Booleaner
+             </span> <br>
                  <span id="data">il 10/10/2020</span>
              </p>
              <img class="tim" src="img/tim-1.jpg" alt="foto 1">
