--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
     </header> 
        <!-- Parte Principale -->
     <main>
-        <!-- Titolo Principale -->
-        <section>
-            <h1>Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee </h1>
-            <p id="dati-scrittore">Scritto da The Booleaner <br>
-                <span id="data">il 10/10/2020</span>
-            </p>
-            <img class="tim" src="img/tim-1.jpg" alt="foto 1">
-            <img class="tim" src="img/tim-2.jpg" alt="foto 2">
-            <p id="credit">1st Photo:John S. and Jasmes L. Knight Foundation, by Scoot Henrichsen <br>2nd Photo: Wikimedia,by Paul Clarke</p>
-        </section>
+        <main>
+            <!-- Titolo Principale -->
+            <section>
+                <h1>Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee </h1>
+                <p id="dati-scrittore">Scritto da <span id="bool">
+                   The Booleaner
+                </span> <br>
+                    <span id="data">il 10/10/2020</span>
+                </p>
+                <img class="tim" src="img/tim-1.jpg" alt="foto 1">
+                <img class="tim" src="img/tim-2.jpg" alt="foto 2">
+                <p id="credit">1st Photo:John S. and Jasmes L. Knight Foundation, by Scoot Henrichsen <br>2nd Photo: Wikimedia,by Paul Clarke</p>
+            </section>
         <!-- Articolo -->
         <section>
             <p id="articolo">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="evidenziatore">Facere debitis maxime quaerat quis, optio nihil exercitationem aperiam iusto dolorem porro mollitia eius nemo.</span> Perspiciatis vero consequuntur cum vel tenetur nulla!</p>
